# snowmachine

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  MAINTAINER.md  README.md  pyproject.toml  setup.py  snowjob.py
snowjob/: __init__.py  __main__.py
snowmachine/: __init__.py  __main__.py
